--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
+et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.18.0
@@ -81,6 +82,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 opencv-python==4.10.0.84
+openpyxl==3.1.5
 opt_einsum==3.4.0
 overrides==7.7.0
 packaging==24.2
